--- a/index.html
+++ b/index.html
@@ -14,19 +14,33 @@
         <img src="#" alt="" class="logo-img" />
         <br />
         <button id="start-button">Start</button>
-        <p>Kill the enemies with the link between</p>
+        <p>Remove the bombs with the link between two players</p>
+        <p>
+          If you don't remove the bomb in time it will detonate and the game
+          will end
+        </p>
         <p>WASD for Player 1</p>
         <p>ARROW KEYS for Player 2</p>
         <img src="#" alt="" class="arrows-img" />
       </div>
 
       <div id="game-container">
-        <div>
-          <h2>Stats</h2>
-          <p>Score: <span id="score">0</span></p>
+        <div id="stats">
+          <p>Score: <span id="init-score">0</span></p>
+          <p>High score: <span id="init-high-score">0</span></p>
         </div>
         <!-- #game-screen is initially hidden using CSS style display: none -->
-        <div id="game-screen"></div>
+        <div id="game-screen">
+          <div class="wrapper-child">
+            <!-- <h2 id="stats">Stats</h2> -->
+            <div>
+              <p>Score: <span id="score">0</span></p>
+            </div>
+            <div>
+              <p>High score: <span id="high-score">0</span></p>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!-- #game-end is initially hidden using CSS style display: none -->
