mionr bug fixes

--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
           
         </div>
         <br />
-        <button id="start-button">START</button>
-        <p>Remove the bombs with the link between two players</p>
+        
+        <p>Defuse the bombs with the link between two players</p>
         <p>
           If you don't remove a bomb in time it will detonate and the game
           will end
         </p>
-        <p>WASD for Player 1</p>
-        <p>ARROW KEYS for Player 2</p>
-        <img src="#" alt="" class="arrows-img" />
+        <p>WASD for <img src="images/Player2.png" alt="Player1" class="player-img"></p>
+        <p>ARROW KEYS for <img src="images/Player1.png" alt="Player2" class="player-img"></p>
+
+        <button id="start-button">START</button>
       </div>
 
       <div id="game-container">
@@ -55,6 +56,7 @@
         <h1>Game Over</h1>
         <br />
         <button id="restart-button">Restart</button>
+        <button id="menu-button">Return to Menu</button>
       </div>
     </main>
 
